# Takt-2

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  redocly.yaml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: api_token_cursor.rs  api_tokens.rs  auth.rs  lib.rs
crates/api/tests/: api_token_cursor.rs  api_tokens_http.rs  auth_http.rs  health_http.rs
crates/application/: Cargo.toml
crates/application/src/: api_token.rs  lib.rs
crates/application/tests/: api_tokens.rs  credentials.rs
crates/domain/: Cargo.toml
crates/domain/src/: api_token.rs  lib.rs  session.rs
crates/domain/tests/: resource_id.rs  session_policy.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: api_token_repository.rs  config.rs  database.rs  lib.rs  repository.rs
crates/persistence/tests/: postgres_contract.rs  sqlite_contract.rs
crates/persistence/tests/common/: mod.rs
crates/probe-protocol/: Cargo.toml
crates/probe-protocol/src/: lib.rs
crates/probe-protocol/tests/: generated_contract.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/tests/: admin_bootstrap_cli.rs
docs/: dependencies.md  development.md  persistence.md
docs/implementation-evidence/: bootstrap.md  evid-001-independent-head-validation.md  gov-002-node-supply-chain.md  gov-003-package-preflight.md  iam-010-auth-domain-contract.md  iam-011-session-persistence.md  iam-012-login-rate-limit.md  iam-014-recovery-persistence.md  iam-015-session-lifecycle.md  iam-016-auth-application.md  iam-018-auth-runtime.md  iam-020-auth-http-boundary.md  iam-021-api-token-domain.md  iam-022-api-token-lifecycle.md  iam-023-api-token-storage.md  iam-024-api-token-idempotency-storage.md  iam-025-api-token-application.md  iam-026-api-token-patch-idempotency.md  iam-027-api-token-idempotency-foundation.md  iam-028-api-token-revoke-idempotency.md  iam-029-api-token-bearer.md  iam-034-api-token-read-http.md  iam-035-api-token-read-boundary.md  iam-036-api-token-cursor.md  iam-037-api-token-get-boundary.md  iam-038-api-token-actor.md  iam-039-api-token-idempotent-writes.md  iam-040-api-token-create-http.md  iam-042-api-token-idempotent-mutations.md  iam-043-api-token-mutation-replay.md  implementation-tracking.md  persistence-admin-bootstrap.md  qa-001-acceptance-bindings.md  spec-010-data-requirements.md  spec-012-auth-contract.md  spec-013-check-spec-contract.md  spec-014-index-integrity.md  spec-015-api-token-contract.md  spec-019-network-options-contract.md  spec-020-api-token-idempotency-contract.md  (+1 more)
docs/implementation-tracking/: README.md  current-status.md  findings.yaml  requirements.yaml  work-packages.yaml
migrations/postgres/: 0001_persistent_identity.sql  0002_sessions.sql  0003_recovery_tokens.sql  0004_api_tokens.sql  0005_api_token_idempotency.sql  0006_api_token_actor.sql  0007_api_token_mutation_replay.sql
migrations/sqlite/: 0001_persistent_identity.sql  0002_sessions.sql  0003_recovery_tokens.sql  0004_api_tokens.sql  0005_api_token_idempotency.sql  0006_api_token_actor.sql  0007_api_token_mutation_replay.sql
specs/: 00-product-requirements.md  01-architecture.md  02-domain-data.md  03-api-and-automation.md  04-probes-and-checks.md  05-ui-ux.md  06-security-operations.md  07-quality-acceptance.md  08-roadmap.md  09-ai-implementation.md  10-traceability.md  README.md
specs/acceptance/: bindings.yaml  v0.1.feature  v0.2.feature  v0.3.feature
specs/contracts/: openapi.yaml  probe.proto  takt-config.schema.json
specs/contracts/fixtures/: check-spec-invalid.json  check-spec-valid.json
specs/examples/: takt.yaml
tests/e2e/: bootstrap.spec.ts
tools/: check-acceptance-bindings.mjs  check-acceptance-bindings.test.mjs  check-architecture.mjs  check-implementation-tracking.mjs  check-implementation-tracking.test.mjs  check-node-licenses.mjs  check-node-licenses.test.mjs  check-spec-contract.test.mjs  check-spec-index.mjs  check-spec-index.test.mjs  check-web-dist.mjs  node-supply-chain.test.mjs  openapi-auth-contract.test.mjs  openapi-token-contract.test.mjs  openapi-types.mjs  scan-secrets.mjs  validate-gherkin.mjs  validate-schema.mjs
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
web/: eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.mjs
web/src/: App.test.tsx  App.tsx  main.tsx  styles.css
