[workspace]
resolver = "3"
members = [
    "crates/api",
    "crates/application",
    "crates/domain",
    "crates/persistence",
    "crates/probe-protocol",
    "crates/server",
    "tools/xtask",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"

[workspace.dependencies]
argon2 = { version = "=0.5.3", features = ["std", "zeroize"] }
async-trait = "=0.1.91"
chacha20poly1305 = { version = "=0.11.0", features = ["alloc", "zeroize"] }
axum = { version = "=0.8.9", default-features = false, features = ["http1", "json", "original-uri", "tokio"] }
clap = { version = "=4.6.2", features = ["derive"] }
getrandom = "=0.4.3"
form_urlencoded = "=1.2.2"
hmac = "=0.13.0"
prost = "=0.14.4"
prost-build = "=0.14.4"
protox = "=0.9.1"
rust-embed = { version = "=8.12.0", default-features = false, features = ["debug-embed", "deterministic-timestamps"] }
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.10.9"
sha2_11 = { package = "sha2", version = "=0.11.0" }
sqlx = { version = "=0.9.0", default-features = false, features = ["json", "macros", "migrate", "postgres", "runtime-tokio", "sqlite", "time", "uuid"] }
tempfile = "=3.27.0"
subtle = "=2.6.1"
time = { version = "=0.3.53", features = ["formatting"] }
tokio = { version = "=1.53.0", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["fmt", "json"] }
uuid = { version = "=1.24.0", features = ["v7"] }
zeroize = "=1.8.2"
