[package]
name = "takt-api"
description = "Public HTTP boundary for Takt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
rust-embed.workspace = true
serde.workspace = true
time.workspace = true
tracing.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
tokio.workspace = true
