[package]
name = "takt-api"
description = "Public HTTP boundary for Takt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
hmac.workspace = true
rust-embed.workspace = true
serde.workspace = true
sha2_11.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zeroize.workspace = true
