[package]
name = "takt-persistence"
description = "SQLx persistence adapters and migrations for Takt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
sqlx.workspace = true
takt-application = { path = "../application", version = "=0.0.0" }
takt-domain = { path = "../domain", version = "=0.0.0" }
time.workspace = true
tokio.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
