[package]
name = "takt-server"
description = "Takt server composition root"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "takt-server"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
axum.workspace = true
clap.workspace = true
getrandom.workspace = true
serde_json.workspace = true
takt-api = { path = "../api", version = "=0.0.0" }
takt-application = { path = "../application", version = "=0.0.0" }
takt-persistence = { path = "../persistence", version = "=0.0.0" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
sqlx.workspace = true
tempfile.workspace = true
