[package]
name = "xtask"
description = "Reproducible repository code generation tasks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
prost-build.workspace = true
protox.workspace = true
tempfile.workspace = true

